--- a/contribuer.html
+++ b/contribuer.html
@@ -1,12 +1,11 @@
 
-
 <!DOCTYPE html>
 
 <html lang="fr">
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Contribuer 3- Paana</title>
+<title>Contribuer - Paana</title>
 <meta content="Paana - Base de connaissances sur la santé publique en Polynésie française" name="description"/>
 <link href="header-footer.css" rel="stylesheet"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
@@ -205,8 +204,8 @@
 <div class="signature">Emmanuelle RUPP-TERRIS</div>
 </div>
 <nav>
-<a href='/a-propos'>A PROPOS</a>
-<a href='/contribuer'>CONTRIBUER</a>
+<a href="a-propos.html">A PROPOS</a>
+<a href="contribuer.html">CONTRIBUER</a>
 <a href="https://forms.gle/PR8ZHvSXxLNYETtx9" target="_blank">SOUMETTRE</a>
 <a href="mailto:frise.sante.pf@gmail.com"><i class="fas fa-envelope fa-lg"></i></a>
 </nav>
@@ -407,3 +406,4 @@ window.addEventListener("DOMContentLoaded", () => {
 </script>
 </body>
 </html>
+
