--- a/contribuer.html
+++ b/contribuer.html
@@ -351,12 +351,12 @@ window.addEventListener("DOMContentLoaded", () => {
 
     fiche.innerHTML = `
       ${e.start && e.end ? `<p><strong>Année ou période :</strong> ${e.start === e.end ? e.start : e.start + ' – ' + e.end}</p>` : ''}
-      ${e.maincat ? `<p><strong>Catégorie principale :</strong> ${e.maincat}</p>` : ''}
-      ${(e.subcats || []).length ? `<p><strong>Catégorie secondaire :</strong> ${e.subcats.join(', ')}</p>` : ''}
+     ${e.maincat ? `<p><strong>Catégorie principale :</strong> ${e.maincat} <a href="categories-expliquées.pdf" target="_blank" style="margin-left:0.5rem;"><i class="fas fa-circle-info"></i></a></p>` : ''}
+${(e.subcats || []).length ? `<p><strong>Catégories secondaires :</strong> ${e.subcats.join(', ')} <a href="categories-expliquées.pdf" target="_blank" style="margin-left:0.5rem;"><i class="fas fa-circle-info"></i></a></p>` : ''}
       ${e.themes ? `<p><strong>Thème :</strong> ${e.themes}</p>` : ''}
       ${mots ? `<p><strong>Mots-clefs (issus du DeCS) :</strong> ${mots}</p>` : ''}
       ${e.description ? `<p><strong>Description :</strong> ${e.description}</p>` : ''}
-      ${e.source ? `<p><strong>Source :</strong> <a href="${e.source}" target="_blank">${e.source}</a></p>` : ''}
+      ${e.source ? `<p><strong>Source(s) :</strong> <a href="${e.source}" target="_blank">${e.source}</a></p>` : ''}
       <h4>Autres événements du même thème</h4>
       <ul>${other}</ul>
       <div id="fiche-navigation">
