--- a/contribuer.html
+++ b/contribuer.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Contribuer 1- Paana</title>
+<title>Contribuer 2- Paana</title>
 <meta content="Paana - Base de connaissances sur la santé publique en Polynésie française" name="description"/>
 <link href="header-footer.css" rel="stylesheet"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
@@ -285,11 +285,16 @@ window.addEventListener("DOMContentLoaded", () => {
     const makeEventText = (e, idx) => {
       const icon = categoryIcons[e.maincat] ? `<i class="fas ${categoryIcons[e.maincat]}" title="${e.maincat}" style="margin-right:0.4rem;"></i>` : "";
       const color = stringToColor(e.themes || "");
-      return '<div class="event" data-id="' + idx + '" style="border-left:5px solid ' + color + ';padding-left:0.6rem;background:white;cursor:pointer;" onclick="window.renderFiche(window.eventData[' + idx + '],' + idx + ')">' +
-               '<div>' + icon + '&nbsp;&nbsp;' + e.title + 
-               (e.start !== e.end ? ' <em>(' + e.start + '–' + e.end + ')</em>' : '') +
-               (e.start !== e.end ? '<span class="pluriannuel-badge">Pluriannuel</span>' : '') +
-               '</div></div>';
+     return `
+  <div class="event" data-id="${idx}" style="border-left:5px solid ${color};padding-left:0.6rem;background:white;cursor:pointer;" onclick="window.renderFiche(window.eventData[${idx}], ${idx})">
+    <div>
+      ${icon}
+      <span style="display:inline-block; width:12px; height:12px; background-color:${color}; margin-right:6px; vertical-align:middle;" title="Thème : ${e.themes}"></span>
+      ${e.title}
+      ${(e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : '')}
+      ${(e.start !== e.end ? '<span class="pluriannuel-badge">Pluriannuel</span>' : '')}
+    </div>
+  </div>`;
     };
 
     window.eventData.forEach((e, idx) => {
