--- a/contribuer.html
+++ b/contribuer.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Contribuer 3- Paana</title>
+<title>Contribuer - Paana</title>
 <meta content="Paana - Base de connaissances sur la santé publique en Polynésie française" name="description"/>
 <link href="header-footer.css" rel="stylesheet"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
@@ -176,9 +176,11 @@
       text-decoration: underline;
     }
     #fiche-navigation {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 1.5rem;
+      margin-top: 2rem;
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px solid var(--gray);
+  padding-top: 1.5rem;
     }
     #fiche-navigation button {
       background-color: var(--primary);
@@ -237,7 +239,9 @@
 </div>
 <div class="fiche-column">
 <h3 id="fiche-titre">Détails</h3>
-<div id="fiche-content">Cliquez sur un événement pour voir sa fiche complète.</div>
+<div id="fiche-content">...</div>
+<div id="fiche-navigation" class="navigation-chronologique">
+  <!-- Les boutons seront ajoutés dynamiquement ici -->
 </div>
 </div>
 </main>
@@ -363,14 +367,19 @@ ${(e.subcats || []).length ? `<p><strong>Catégories secondaires<a href="Les FES
       ${e.source ? `<p><strong>Source(s) :</strong> <a href="${e.source}" target="_blank">${e.source}</a></p>` : ''}
       <h4>Autres événements du même thème</h4>
       <ul>${other}</ul>
-      <div id="fiche-navigation">
+     // 1. Actualise seulement la fiche descriptive
+fiche.innerHTML = ficheHTML;
+
+// 2. Ajoute la navigation chronologique en dehors
+const nav = document.getElementById("fiche-navigation");
+nav.innerHTML = `
   <button ${index > 0 ? `onclick="window.renderFiche(window.eventData[${index - 1}], ${index - 1})"` : 'disabled'}>
-    Précédent
+    ← Précédent
   </button>
   <button ${index < window.eventData.length - 1 ? `onclick="window.renderFiche(window.eventData[${index + 1}], ${index + 1})"` : 'disabled'}>
-    Suivant
+    Suivant →
   </button>
-</div>
+`;
     `;
   };
 
