--- a/contribuer.html
+++ b/contribuer.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Contribuer 3- Paana</title>
+<title>Contribuer 1- Paana</title>
 <meta content="Paana - Base de connaissances sur la santé publique en Polynésie française" name="description"/>
 <link href="header-footer.css" rel="stylesheet"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
@@ -263,12 +263,11 @@
     ❔ Aide
   </button>
   <div id="help-content" style="display:none; margin-top: 8px; background: white; border: 1px solid #ccc; padding: 1rem; width: 300px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.2); font-size: 0.9rem;">
-    <h4>Aide</h4>
+    <h4>Mode d'emploi</h4>
     <ul style="padding-left: 1rem;">
-      <li><strong>Catégories :</strong> Les catégories (FESP) sont des fonctions essentielles de santé publique.</li>
-      <li><strong>Couleurs :</strong> Chaque thème est représenté par une couleur unique.</li>
-      <li><strong>Mots-clefs :</strong> Ils résument le sujet principal, selon le thésaurus DeCS.</li>
-    </ul>
+      <li><strong>Icônes :</strong> Chaque icône correspond à la catégorie principale de l'événement. Passez la souris dessus pour afficher le nom exact de la catégorie.</li>
+      <li><strong>Couleurs :</strong> Chaque carré de couelur correspond au thème de l'événement. Passez la souris dessus pour afficher le nom exact du thème.</li>
+      </ul>
   </div>
 </div>
 </main>
