--- a/contribuer.html
+++ b/contribuer.html
@@ -260,7 +260,7 @@
 </div>
     <div id="floating-help" style="position: fixed; bottom: 20px; right: 20px; z-index: 999;">
   <button onclick="toggleHelp()" style="background: #007b7f; color: white; border: none; border-radius: 6px; padding: 10px 14px; cursor: pointer;">
-    ❔ Aide
+    ❔ Mode d'emploi
   </button>
   <div id="help-content" style="display:none; margin-top: 8px; background: white; border: 1px solid #ccc; padding: 1rem; width: 300px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.2); font-size: 0.9rem;">
     <h4>Mode d'emploi</h4>
