--- a/contribuer.html
+++ b/contribuer.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Contribuer 2- Paana</title>
+<title>Contribuer 1- Paana</title>
 <meta content="Paana - Base de connaissances sur la santé publique en Polynésie française" name="description"/>
 <link href="header-footer.css" rel="stylesheet"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
@@ -210,6 +210,53 @@
     #fiche-navigation button:hover {
       background-color: #005f62;
     }
+
+.filter-dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.filter-toggle {
+  background-color: var(--primary);
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  font-size: 0.9rem;
+  cursor: pointer;
+  border-radius: 6px;
+}
+
+.filter-options {
+  display: none;
+  position: absolute;
+  z-index: 1000;
+  background-color: white;
+  border: 1px solid #ccc;
+  padding: 0.5rem;
+  max-height: 300px;
+  overflow-y: auto;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+  margin-top: 0.3rem;
+  min-width: 200px;
+}
+
+.filter-dropdown.open .filter-options {
+  display: block;
+}
+
+.filter-options label {
+  display: block;
+  margin-bottom: 0.3rem;
+  color: var(--text);
+  cursor: pointer;
+}
+
+.filter-options label.disabled {
+  color: #aaa;
+}
+
+    
   </style>
 </head>
 <body>
@@ -227,6 +274,25 @@
 </nav>
 </header>
 <main>
+    <div id="filters" style="display: flex; gap: 1rem; margin-bottom: 1.5rem;">
+  <!-- Filtre Catégories -->
+  <div class="filter-dropdown">
+    <button class="filter-toggle">Catégories ⌄</button>
+    <div class="filter-options" id="filter-categories"></div>
+  </div>
+
+  <!-- Filtre Thèmes -->
+  <div class="filter-dropdown">
+    <button class="filter-toggle">Thèmes ⌄</button>
+    <div class="filter-options" id="filter-themes"></div>
+  </div>
+
+  <!-- Filtre Mots-clés -->
+  <div class="filter-dropdown">
+    <button class="filter-toggle">Mots-clés ⌄</button>
+    <div class="filter-options" id="filter-keywords"></div>
+  </div>
+</div>
 <div class="timeline-layout">
 <div class="years-container">
 <button id="scroll-up">↑</button>
@@ -454,7 +520,20 @@ ${(e.subcats || []).length ? `<p><strong>Catégories secondaires<a href="Les FES
   help.style.display = isVisible ? "none" : "block";
   btn.setAttribute("aria-expanded", !isVisible);
 }
-    
+   document.querySelectorAll('.filter-toggle').forEach(btn => {
+  btn.addEventListener('click', () => {
+    const dropdown = btn.parentElement;
+    dropdown.classList.toggle('open');
+  });
+});
+
+document.addEventListener('click', (e) => {
+  document.querySelectorAll('.filter-dropdown').forEach(dropdown => {
+    if (!dropdown.contains(e.target)) {
+      dropdown.classList.remove('open');
+    }
+  });
+}); 
 </script>
 </body>
 </html>
